Made the basic Game Engine
Added Classes:
Game 
Input Listens for inputs
GameObjectManager - instantiate GameObjects
GameObject - add, remove and find components
Component - Parent for other classes

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -155,14 +155,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Component.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GameObjectManager.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="MeshRenderer.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Component.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MeshRenderer.cpp" />
     <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resources\Assets\awesomeface.png" />
