--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CameraMovement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files\GameObject\Components</Filter>
     </ClCompile>
     <ClCompile Include="Renderer.cpp">
+      <Filter>Source Files\GameObject\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraMovement.cpp">
       <Filter>Source Files\GameObject\Components</Filter>
     </ClCompile>
   </ItemGroup>
