Made the Mesh Loader
You now load a mesh from the specified place in the level script. These are .ple files with vertex colours
You can also have multiple models in a level at once as long as they all have the same shader program.
Also updated the level maker to work with the parameter changes

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="LevelFileManager.h" />
     <ClInclude Include="MeshRenderer.h" />
+    <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
@@ -182,6 +183,7 @@
     <ClCompile Include="LevelFileManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MeshRenderer.cpp" />
+    <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="OpenGLInclude.h" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -196,6 +198,8 @@
   <ItemGroup>
     <None Include="core.frag" />
     <None Include="core.vert" />
+    <None Include="house.ply" />
+    <None Include="TreeTest.ply" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Level.txt" />
