--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
@@ -165,14 +165,6 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="core.vert">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
-    <None Include="core.frag">
-      <Filter>Source Files\Shaders</Filter>
-    </None>
-    <None Include="house.ply" />
-    <None Include="TreeTest.ply" />
     <None Include="Resources\Models\TreeTest.ply" />
     <None Include="Resources\Models\house.ply" />
     <None Include="Resources\Shaders\core.frag">
@@ -181,6 +173,7 @@
     <None Include="Resources\Shaders\core.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="Resources\Models\FlipTest.ply" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Resources\Levels\Level.txt" />
