--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
@@ -157,25 +157,25 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="Resources\Assets\awesomeface.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="Resources\Assets\container.jpg">
-      <Filter>Resource Files</Filter>
-    </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Models\TreeTest.ply" />
-    <None Include="Resources\Models\house.ply" />
     <None Include="Resources\Shaders\core.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="Resources\Shaders\core.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
-    <None Include="Resources\Models\FlipTest.ply" />
+    <None Include="Resources\Models\TreeTest.ply">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Resources\Models\FlipTest.ply">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Resources\Models\house.ply">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="Resources\Levels\Level.txt" />
+    <Text Include="Resources\Levels\Level.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
