--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Component.cpp" />
+    <ClCompile Include="RigidBody.cpp" />
     <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
