Improved the light icon system Added more icons Made the icons face the camera, mostly made the lights auto add icons fixed a bug in the mesh renderer where their projection was never set when there are no icons

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -232,6 +232,11 @@
   <ItemGroup>
     <Text Include="Resources\Levels\Level.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\Icons\directional_icon.jpg" />
+    <Image Include="Resources\Icons\pointLightIcon.jpg" />
+    <Image Include="Resources\Icons\spot_icon.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
