Added a debug mode and replaced all of the cout statements with log calls when I could.

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="EditorCamera.h" />
+    <ClInclude Include="EditorDebug.h" />
     <ClInclude Include="EditorMode.h" />
     <ClInclude Include="IconRenderer.h" />
     <ClInclude Include="imGUI\imconfig.h" />
@@ -195,6 +196,7 @@
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="EditorCamera.cpp" />
+    <ClCompile Include="EditorDebug.cpp" />
     <ClCompile Include="EditorMode.cpp" />
     <ClCompile Include="IconRenderer.cpp" />
     <ClCompile Include="imGUI\imgui.cpp" />
